--- a/src/scanplot/main.ipynb
+++ b/src/scanplot/main.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "import cv2 as cv\n",
     "\n",
-    "from ipywidgets import interact, widgets\n",
+    "from ipywidgets import interact, widgets, fixed\n",
     "from plotly.express import imshow as imshow_interactive"
    ]
   },
@@ -78,7 +78,8 @@
    "outputs": [],
    "source": [
     "from scanplot.utils.read_image import read_image_rgb\n",
-    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image"
+    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image\n",
+    "from scanplot.utils.widgets import points_num_slider, points_density_slider"
    ]
   },
   {
@@ -208,49 +209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add ROI (optional)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imshow_interactive(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x_min, x_max, y_min, y_max = 221, 458, 47, 418\n",
-    "# roi_bbox = (x_min, x_max, y_min, y_max)\n",
-    "\n",
-    "# image = crop_image(image, roi_bbox)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imshow_interactive(image)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Tresholding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +223,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -298,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +270,13 @@
      "output_type": "stream",
      "text": [
       "DEBUG - template_match.py - template_match: Convolution map bounds: (0.0, 0.8545219)\n",
-      "DEBUG - template_match.py - template_match: Convolution map was inverted\n",
+      "DEBUG - template_match.py - template_match: Convolution map was inverted\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "DEBUG - template_match.py - template_match: Convolution map bounds: (0.0, 0.8545219)\n",
       "DEBUG - template_match.py - template_match: Convolution map was inverted\n"
      ]
@@ -330,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,50 +368,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: move to separate module\n",
     "\n",
-    "@interact(points_num=widgets.FloatSlider(value=20, min=0, max=100, step=1),\n",
-    "          points_density=widgets.FloatSlider(value=20, min=0, max=100, step=1))\n",
-    "def visualize(points_num, points_density):\n",
-    "    \n",
-    "\n",
-    "    CORR_MAP = convolution_map4\n",
+    "def detect_points_on_map(\n",
+    "        points_num: float,\n",
+    "        points_density: float,\n",
+    "        correlation_map: np.ndarray,\n",
+    "        draw_detections: bool = True,\n",
+    "        return_result: bool = False,\n",
+    "        figure_size: int = 10,\n",
+    "        marker_size: int = 60,\n",
+    "        marker_color: str = \"yellow\"\n",
+    ") -> np.ndarray | None:\n",
     "    \n",
     "    ## transform parameters\n",
     "    corr_map_treshold = linear_parameter_transform(points_num, a=-0.01, b=1)\n",
     "    iou_treshold = linear_parameter_transform(points_density, a=-0.01, b=1)\n",
     "\n",
     "    ## get max points\n",
-    "    max_points, number_of_maximums = get_corr_map_maximums(\n",
-    "        correlation_map=CORR_MAP,\n",
+    "    max_points, _ = get_corr_map_maximums(\n",
+    "        correlation_map=correlation_map,\n",
     "        treshold=corr_map_treshold\n",
     "    )\n",
     "    \n",
     "    ## NMS\n",
     "    actual_points = apply_nms(\n",
     "        points=max_points,\n",
-    "        correlation_map=CORR_MAP,\n",
+    "        correlation_map=correlation_map,\n",
     "        iou_treshold=iou_treshold,\n",
-    "        bbox_width=w_template,\n",
-    "        bbox_height=h_template\n",
+    "        bbox_width=w_template,   # TODO: this is global variable, fix it (!)\n",
+    "        bbox_height=h_template   # TODO: this is global variable, fix it (!)\n",
     "    )\n",
     "    x_nms = actual_points[:, 0]\n",
     "    y_nms = actual_points[:, 1]\n",
+    "    number_of_points = len(actual_points)\n",
     "\n",
     "    ## draw founded points on original image\n",
-    "    plt.figure(figsize=(9, 9))\n",
-    "    draw_image(source_image)\n",
-    "    plt.scatter(x_nms, y_nms, s=60, c=\"yellow\", marker=\"*\",  edgecolors='black', linewidths=0.2)\n",
-    "    # plt.xticks([]); plt.yticks([]);\n",
-    "    plt.title(f\"{corr_map_treshold=}, {iou_treshold=}, {number_of_maximums=}\")\n",
-    "    plt.show()\n",
+    "    if draw_detections:\n",
+    "        plt.figure(figsize=(figure_size, figure_size))\n",
+    "        draw_image(source_image)\n",
+    "        plt.scatter(x_nms, y_nms, \n",
+    "                    s=marker_size, c=marker_color, marker=\"*\", \n",
+    "                    edgecolors='black', linewidths=0.2)\n",
+    "        plt.xticks([]); plt.yticks([])\n",
+    "        plt.title(f\"Number of Points: {number_of_points}\")\n",
+    "        plt.show()\n",
     "\n",
-    "    # ## draw founded points on clear canvas\n",
-    "    # plt.figure(figsize=(10, 6))\n",
-    "    # draw_points_on_canvas(actual_points, source_image)"
+    "    if return_result:\n",
+    "        return actual_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parameters for drawing detections (may be customized)\n",
+    "figure_size = 12\n",
+    "marker_size = 80\n",
+    "marker_color = \"yellow\"\n",
+    "\n",
+    "\n",
+    "interact(\n",
+    "    detect_points_on_map,\n",
+    "    points_num=points_num_slider,  # variable\n",
+    "    points_density=points_density_slider,  # variable\n",
+    "    correlation_map=fixed(convolution_map3),  # constants\n",
+    "    draw_detections=fixed(True),\n",
+    "    return_result=fixed(False),\n",
+    "    figure_size=fixed(figure_size),\n",
+    "    marker_size=fixed(marker_size),\n",
+    "    marker_color=fixed(marker_color)\n",
+    ");"
    ]
   },
   {
