add start_value parameter to widget sliders

--- a/src/scanplot/notebooks_dev/optimization.ipynb
+++ b/src/scanplot/notebooks_dev/optimization.ipynb
@@ -784,12 +784,11 @@
     "marker_size = 120\n",
     "marker_color = \"yellow\"\n",
     "\n",
-    "\n",
     "interact(\n",
     "    detect_points_on_map,\n",
-    "    points_num=init_points_num_slider(),  # variable\n",
-    "    points_density=init_points_density_slider(),  # variable\n",
-    "    correlation_map=fixed(convolution_map4),  # constants\n",
+    "    points_num=init_points_num_slider(start_value=best_points_num),\n",
+    "    points_density=init_points_density_slider(start_value=best_points_density),\n",
+    "    correlation_map=fixed(convolution_map4),\n",
     "    draw_detections=fixed(True),\n",
     "    return_result=fixed(False),\n",
     "    figure_size=fixed(figure_size),\n",
