format with black

--- a/src/scanplot/main.ipynb
+++ b/src/scanplot/main.ipynb
@@ -43,6 +43,7 @@
    "source": [
     "import sys\n",
     "import pathlib\n",
+    "\n",
     "SRC_DIR = str(pathlib.Path(__name__).resolve().parent.parent)\n",
     "sys.path.append(SRC_DIR)"
    ]
@@ -63,7 +64,11 @@
    "outputs": [],
    "source": [
     "from scanplot.utils.read_image import read_image_rgb\n",
-    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image\n",
+    "from scanplot.utils.drawing import (\n",
+    "    draw_image,\n",
+    "    draw_points_on_canvas,\n",
+    "    draw_points_on_image,\n",
+    ")\n",
     "from scanplot.utils.widgets import init_points_num_slider, init_points_density_slider"
    ]
   },
@@ -76,9 +81,16 @@
     "from scanplot.core.template_match import template_match\n",
     "from scanplot.core.preprocess import replace_black_pixels\n",
     "from scanplot.core.conv_map_operations import normalize_map\n",
-    "from scanplot.core.process_template import template_tresholding, crop_image, reconstruct_template_mask\n",
+    "from scanplot.core.process_template import (\n",
+    "    template_tresholding,\n",
+    "    crop_image,\n",
+    "    reconstruct_template_mask,\n",
+    ")\n",
     "from scanplot.core.hough_transform import generalized_hough_transform\n",
-    "from scanplot.core.parameters_search import linear_parameter_transform, get_corr_map_maximums\n",
+    "from scanplot.core.parameters_search import (\n",
+    "    linear_parameter_transform,\n",
+    "    get_corr_map_maximums,\n",
+    ")\n",
     "from scanplot.core.nms import apply_nms"
    ]
   },
@@ -122,7 +134,9 @@
     "MARKER_NUMBER = 1\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
-    "TEMPLATE_PATH = DATA_PATH / \"marker_images\" / f\"plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.png\""
+    "TEMPLATE_PATH = (\n",
+    "    DATA_PATH / \"marker_images\" / f\"plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.png\"\n",
+    ")"
    ]
   },
   {
@@ -150,12 +164,14 @@
     "plt.subplot(1, 2, 1)\n",
     "draw_image(image)\n",
     "plt.title(\"Source image\")\n",
-    "plt.xticks([]); plt.yticks([])\n",
+    "plt.xticks([])\n",
+    "plt.yticks([])\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "draw_image(template)\n",
     "plt.title(\"Chosen marker\")\n",
-    "plt.xticks([]); plt.yticks([]);"
+    "plt.xticks([])\n",
+    "plt.yticks([]);"
    ]
   },
   {
@@ -224,7 +240,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accumulator = generalized_hough_transform(image, template, norm_result=True, crop_result=True)\n",
+    "accumulator = generalized_hough_transform(\n",
+    "    image, template, norm_result=True, crop_result=True\n",
+    ")\n",
     "\n",
     "assert convolution_map.shape == accumulator.shape"
    ]
@@ -302,33 +320,32 @@
    "outputs": [],
    "source": [
     "def detect_points_on_map(\n",
-    "        points_num: float,\n",
-    "        points_density: float,\n",
-    "        correlation_map: np.ndarray,\n",
-    "        draw_detections: bool = True,\n",
-    "        return_result: bool = False,\n",
-    "        figure_size: int = 10,\n",
-    "        marker_size: int = 60,\n",
-    "        marker_color: str = \"yellow\"\n",
+    "    points_num: float,\n",
+    "    points_density: float,\n",
+    "    correlation_map: np.ndarray,\n",
+    "    draw_detections: bool = True,\n",
+    "    return_result: bool = False,\n",
+    "    figure_size: int = 10,\n",
+    "    marker_size: int = 60,\n",
+    "    marker_color: str = \"yellow\",\n",
     ") -> np.ndarray | None:\n",
-    "    \n",
+    "\n",
     "    ## transform parameters\n",
     "    corr_map_treshold = linear_parameter_transform(points_num, a=-0.01, b=1)\n",
     "    iou_treshold = linear_parameter_transform(points_density, a=-0.01, b=1)\n",
     "\n",
     "    ## get max points\n",
     "    max_points, _ = get_corr_map_maximums(\n",
-    "        correlation_map=correlation_map,\n",
-    "        treshold=corr_map_treshold\n",
+    "        correlation_map=correlation_map, treshold=corr_map_treshold\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    ## NMS\n",
     "    actual_points = apply_nms(\n",
     "        points=max_points,\n",
     "        correlation_map=correlation_map,\n",
     "        iou_treshold=iou_treshold,\n",
-    "        bbox_width=w_template,   # TODO: this is global variable, pass as paramrter\n",
-    "        bbox_height=h_template   # TODO: this is global variable, pass as paramrter\n",
+    "        bbox_width=w_template,  # TODO: this is global variable, pass as paramrter\n",
+    "        bbox_height=h_template,  # TODO: this is global variable, pass as paramrter\n",
     "    )\n",
     "    x_nms = actual_points[:, 0]\n",
     "    y_nms = actual_points[:, 1]\n",
@@ -338,10 +355,17 @@
     "    if draw_detections:\n",
     "        plt.figure(figsize=(figure_size, figure_size))\n",
     "        draw_image(source_image)  # TODO: this is global variable, pass as paramrter\n",
-    "        plt.scatter(x_nms, y_nms, \n",
-    "                    s=marker_size, c=marker_color, marker=\"*\", \n",
-    "                    edgecolors='black', linewidths=0.2)\n",
-    "        plt.xticks([]); plt.yticks([])\n",
+    "        plt.scatter(\n",
+    "            x_nms,\n",
+    "            y_nms,\n",
+    "            s=marker_size,\n",
+    "            c=marker_color,\n",
+    "            marker=\"*\",\n",
+    "            edgecolors=\"black\",\n",
+    "            linewidths=0.2,\n",
+    "        )\n",
+    "        plt.xticks([])\n",
+    "        plt.yticks([])\n",
     "        plt.title(f\"Number of Points: {number_of_points}\")\n",
     "        plt.show()\n",
     "\n",
@@ -378,7 +402,7 @@
     "    figure_size=fixed(figure_size),\n",
     "    marker_size=fixed(marker_size),\n",
     "    marker_color=fixed(marker_color),\n",
-    "    continuous_update=True\n",
+    "    continuous_update=True,\n",
     ");"
    ]
   },
@@ -396,7 +420,7 @@
     "    points_density=optimal_points_density,\n",
     "    correlation_map=convolution_map_with_hough,\n",
     "    draw_detections=False,\n",
-    "    return_result=True\n",
+    "    return_result=True,\n",
     ")\n",
     "\n",
     "# points coordinates in pixels (!)\n",
